<resources>
    <string name="app_name">Project2eCommerce</string>
    <string name="hello_jc">Hello JC!</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="welcome">Welcome!</string>
    <string name="purchase_items">Purchase Items</string>
    <string name="view_purchases">View Purchases</string>
    <string name="change_password">Change Password</string>
    <string name="welcome_to_store">Welcome to store</string>
    <string name="sign_in2">Sign In</string>
    <string name="username">Username</string>
    <string name="password">password</string>
    <string name="login">Login!</string>
    <string name="logged_in">LOGGED IN</string>
    <string name="preference_file_key">eCommPreferenceFileName</string>
    <string name="preference_userId_key">eCommPreferenceUserIdKey</string>
    <string name="admin">Admin</string>
    <string name="welcome_admin">Welcome Admin</string>
    <string name="edit_user">Edit User</string>
    <string name="edit_item">Edit Item</string>
    <string name="add_item">Add Item</string>
    <string name="edit_user_admin">Edit User/Admin</string>
    <string name="back">Back</string>
    <string name="purchase">PURCHASE</string>
    <string name="home">HOME</string>
    <string name="cart">Cart</string>
    <string name="checkout">Checkout</string>
    <string name="delete_a_user">Delete a User</string>
    <string name="delete">Delete!</string>
    <string name="edit">Edit!</string>
    <string name="add">Add!</string>
    <string name="delete_account">Delete Account</string>
    <string name="clear">Clear</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="enter_item_to_add_to_cart">ENTER ITEM TO ADD TO CART</string>
    <string name="enter_item_quantity">ENTER ITEM QUANTITY</string>
    <string name="quantity">QUANTITY</string>
    <string name="total">TOTAL:</string>
    <string name="the_green_place">The Green Place</string>
</resources>