<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminActivity">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="150dip"
        android:layout_margin="16dip"
        android:layout_marginBottom="24dip"
        android:text="@string/welcome_admin"
        android:textSize="42sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"

        />

    <Button
        android:id="@+id/editUserButton"
        android:layout_width="164dp"
        android:layout_height="62dp"
        android:layout_marginTop="44dp"
        android:text="@string/edit_user_admin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome" />

    <Button
        android:id="@+id/editItemButton"
        android:layout_width="164dp"
        android:layout_height="62dp"
        android:layout_marginTop="20dp"
        android:text="@string/edit_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editUserButton" />

    <Button
        android:id="@+id/addItemButton"
        android:layout_width="164dp"
        android:layout_height="62dp"
        android:layout_marginTop="20dp"
        android:text="@string/add_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editItemButton" />

    <Button
        android:id="@+id/deleteUserButton"
        android:layout_width="164dp"
        android:layout_height="62dp"
        android:text="@string/delete_a_user"

        app:layout_constraintBottom_toTopOf="@+id/backToPage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addItemButton"
        app:layout_constraintVertical_bias="0.169" />

    <Button
        android:id="@+id/backToPage"
        android:layout_width="164dp"
        android:layout_height="62dp"
        android:layout_marginTop="152dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addItemButton"
        app:layout_constraintVertical_bias="0.2" />
</androidx.constraintlayout.widget.ConstraintLayout>