<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/welcome"
        android:layout_width="360dp"
        android:layout_height="62dp"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/the_green_place"
        android:textColor="@color/darkGreen"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/displayName"
        android:layout_width="220dp"
        android:layout_height="59dp"
        android:layout_marginTop="20dp"
        android:text=""
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/purchaseItemsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome" />

    <Button
        android:id="@+id/purchaseItemsButton"
        android:layout_width="164dp"
        android:layout_height="62dp"
        android:layout_marginTop="60dp"
        android:text="@string/purchase_items"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayName" />

    <Button
        android:id="@+id/changePasswordButton"
        android:layout_width="164dp"
        android:layout_height="62dp"
        android:layout_marginTop="284dp"
        android:text="@string/change_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome" />

    <Button
        android:id="@+id/viewPurchasesButton"
        android:layout_width="164dp"
        android:layout_height="62dp"
        android:layout_marginTop="212dp"
        android:text="@string/view_purchases"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome" />

    <Button
        android:id="@+id/deleteAccountButton"
        android:layout_width="164dp"
        android:layout_height="62dp"
        android:layout_marginTop="8dp"
        android:text="@string/delete_account"

        app:layout_constraintBottom_toTopOf="@+id/adminButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/changePasswordButton"
        app:layout_constraintVertical_bias="0.03" />

    <Button
        android:id="@+id/adminButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changePasswordButton"
        android:visibility="visible"
        tools:visibility="visible"
        app:layout_constraintVertical_bias="0.85" />


</androidx.constraintlayout.widget.ConstraintLayout>

