<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PurchaseItemsActivity"
    tools:layout_editor_absoluteX="2dp"
    tools:layout_editor_absoluteY="43dp">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="fill_parent"
        android:layout_height="625dp"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toTopOf="@+id/plantNameEntry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <HorizontalScrollView
            android:id="@+id/horizontal"
            android:layout_width="fill_parent"
            android:layout_height="625dp">

            <RelativeLayout
                android:id="@+id/layout"
                android:layout_gravity="center_horizontal"
                android:layout_width="fill_parent"
                android:layout_height="625dp"
                android:gravity="center"
                android:orientation="vertical">

                <TableLayout
                    android:id="@id/itemsTable"
                    android:layout_width="fill_parent"
                    android:layout_height="625dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="60dp">

                </TableLayout>
            </RelativeLayout>
        </HorizontalScrollView>
    </ScrollView>




    <Button
        android:id="@+id/addToCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="@string/add_to_cart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/viewCartButton"
        app:layout_constraintStart_toEndOf="@id/backToPage" />

    <Button
        android:id="@+id/backToPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="Back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/addToCart"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/viewCartButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="4dp"
        android:layout_marginBottom="28dp"
        android:text="@string/cart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/addToCart" />

    <EditText
        android:id="@+id/plantNameEntry"
        android:layout_width="197dp"
        android:layout_height="36dp"
        android:layout_margin="16dp"
        android:layout_marginTop="153dp"

        android:autofillHints="Please enter username"
        android:gravity="center"
        android:hint="PLANT NAME"
        android:inputType="text"

        android:textSize="12sp"

        app:layout_constraintBottom_toTopOf="@+id/quantityEntry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/quantityEntry"
        android:layout_width="197dp"
        android:layout_height="36dp"
        android:layout_margin="16dp"
        android:layout_marginBottom="48dp"
        android:autofillHints="Please enter username"

        android:gravity="center"
        android:hint="@string/quantity"
        android:inputType="text"

        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/addToCart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>